<resources>
    <string name="app_name">VirtualGuideManager</string>

    <string name="title_section1">Profile</string>
    <string name="title_section2">Language</string>
    <string name="title_section3">Exit</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main_adm">My projects</string>
    <string name="title_activity_main_vis">Guides</string>
    <string name="title_activity_new_project">New project</string>

    <string name="projectname">Project name:</string>
    <string name="description">Description:</string>
    <string name="type">Type:</string>
    <string name="background">Background:</string>
    <string name="save">Save</string>

    <string name="proj_del_up">Choose a option:</string>
    <string name="proj_del">Delete</string>
    <string name="proj_up">Update</string>
    <string name="title_activity_modify_project">Modify project</string>

    <string name="menu_adm_projects">My projects</string>
    <string name="menu_adm_users">User manager</string>
    <string name="menu_adm_infopoints">Infopoints manager</string>
    <string name="title_activity_main_users">User manager</string>
    <string name="title_activity_new_user">New user</string>
    <string name="available_projects">Available projects</string>
    <string name="title_activity_modify_user">Modify user</string>
    <string name="title_activity_main_infopoints">Infopoints</string>
    <string name="title_activity_new_point">New infopoint</string>
    <string name="title_activity_modify_point">Modify infopoint</string>


    <string name="infopoint_name">Infopoint name:</string>
    <string name="infopoint_qr">QR:</string>
    <string name="infopoint_file">File:</string>
    <string name="available_infopoints">Available infopoints</string>
    <string name="title_activity_project_selected">Project</string>
    <string name="title_activity_show_file">No title</string>

    <string name="Administrator">Administrator</string>
    <string name="Other">Other</string>

</resources>
