<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context="com.apps.jpablo.virtualguidemanager.Administrator.New_project">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_alignParentEnd="false"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="32dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="1">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_marginBottom="20dp"
                android:background="#EEEEEE">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/projectname"
                    style="@style/Title"
                    android:id="@+id/lbProjectName"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true"
                    android:paddingBottom="5dp" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/etName"
                    android:textSize="18dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_marginBottom="20dp"
                android:background="#EEEEEE">

                <TextView
                    style="@style/Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:id="@+id/lbDescription"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true"
                    android:paddingBottom="5dp" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/etDescription"
                    android:textSize="18dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_marginBottom="20dp"
                android:background="#EEEEEE">

                <TextView
                    style="@style/Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/type"
                    android:id="@+id/lbType"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true"
                    android:paddingBottom="5dp" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/etType"
                    android:textSize="18dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_marginBottom="20dp"
                android:background="#EEEEEE">

                <TextView
                    style="@style/Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/background"
                    android:id="@+id/textView"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true"
                    android:paddingBottom="5dp" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/editText"
                    android:textSize="18dp" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="35dp">

                <Button
                    android:layout_width="184dp"
                    android:layout_height="wrap_content"
                    android:text="@string/save"
                    style="@style/ButtonA"
                    android:id="@+id/button"
                    android:layout_weight="0.12"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:onClick="save"/>
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
