<!-- A DrawerLayout is intended to be used as the top-level content view using match_parent for both width and height to consume the full space available. -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.apps.jpablo.virtualguidemanager.MainActivity">

    <!-- As the main content view, the view below consumes the entire
         space available using match_parent in both dimensions. -->
    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#CCCCCC">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="298dp"
            android:layout_gravity="center"
            android:background="#FFFFFF"
            >


            <Button
                android:text="@string/login"
                android:id="@+id/bLogin"
                style="@style/ButtonA"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:onClick="login" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_above="@+id/bLogin"
                android:weightSum="1"
                android:layout_marginTop="35dp">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="96dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp">

                    <TextView
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/username"
                        android:id="@+id/lbUsername"
                        android:singleLine="false" />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tvUsername"
                        android:layout_weight="0.63"
                        android:singleLine="true"
                        android:text="Admin" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="96dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp">

                    <TextView
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/password"
                        android:id="@+id/lbPassword" />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:ems="10"
                        android:id="@+id/tvPassword"
                        android:layout_weight="1"
                        android:text="1234" />
                </LinearLayout>
            </LinearLayout>

        </RelativeLayout>
    </FrameLayout>

</LinearLayout>
