<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context="com.apps.jpablo.virtualguidemanager.Administrator.New_user">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_alignParentEnd="false"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="32dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="1">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_marginBottom="20dp"
                android:background="#EEEEEE">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/projectname"
                    style="@style/Title"
                    android:id="@+id/lbUsername"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true"
                    android:paddingBottom="5dp" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/etUsername"
                    android:textSize="18dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_marginBottom="20dp"
                android:background="#EEEEEE">

                <TextView
                    style="@style/Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:id="@+id/lbUserPassword"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true"
                    android:paddingBottom="5dp" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/etUserPassword"
                    android:textSize="18dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_marginBottom="20dp"
                android:background="#EEEEEE">

                <TextView
                    style="@style/Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/type"
                    android:id="@+id/lbUserType"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true"
                    android:paddingBottom="5dp" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/etUserType"
                    android:textSize="18dp" />
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/border"
                android:id="@+id/lineaLayout_projects"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:layout_marginRight="10dp">
                    <TextView
                        style="@style/Title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/available_projects"
                        android:id="@+id/lbAvailableProjects"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentStart="true"
                        android:paddingBottom="5dp"
                        />
                    <ListView
                        android:layout_width="wrap_content"
                        android:layout_height="69dp"
                        android:id="@+id/listView"
                        style="@style/ListviewA"
                        android:layout_centerHorizontal="true"
                        android:layout_alignParentTop="true"
                        android:footerDividersEnabled="true"
                        android:headerDividersEnabled="true"
                        android:choiceMode="singleChoice"
                        android:drawSelectorOnTop="false"
                        android:longClickable="true"
                        />
                    <ImageButton
                        android:id="@+id/fab_addproject"
                        style="@style/FloatingActionButton"
                        android:src="@drawable/plus"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="15dp"
                        android:contentDescription="@null"
                        android:onClick="showProjectList"
                        android:layout_gravity="right"
                        android:layout_width="33dp"
                        android:layout_height="33dp"
                        android:layout_marginRight="20dp"/>
            </LinearLayout>



            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="35dp">

                <Button
                    android:layout_width="184dp"
                    android:layout_height="wrap_content"
                    android:text="@string/save"
                    style="@style/ButtonA"
                    android:id="@+id/button"
                    android:layout_weight="0.12"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:onClick=""/>
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
