<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context="com.apps.jpablo.virtualguidemanager.Administrator.New_point">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_alignParentEnd="false"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="32dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="1">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_marginBottom="20dp"
                android:background="#EEEEEE">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/infopoint_name"
                    style="@style/Title"
                    android:id="@+id/lbInfopointName"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true"
                    android:paddingBottom="5dp" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/etInfopointName"
                    android:textSize="18dp" />
            </LinearLayout>


            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_marginBottom="20dp"
                android:background="#EEEEEE">

                <TextView
                    style="@style/Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/infopoint_file"
                    android:id="@+id/lbInfopointFile"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true"
                    android:paddingBottom="5dp" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/etInfopointFile"
                    android:textSize="18dp"
                    android:enabled="false"/>

                <Button
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:text="File"
                    android:id="@+id/buttonfile"
                    android:onClick="openFolder"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_marginBottom="20dp"
                android:background="#EEEEEE">

                <TextView
                    style="@style/Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/infopoint_qr"
                    android:id="@+id/lbInfopointQR"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true"
                    android:paddingBottom="5dp" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:ems="10"
                        android:id="@+id/etInfopointQR"
                        android:textSize="18dp"
                        android:editable="true"
                        android:enabled="false" />

                    <Button
                        android:layout_width="110dp"
                        android:layout_height="wrap_content"
                        android:text="SCAN QR"
                        android:id="@+id/buttonqr"
                        android:onClick="scanQR"/>
                </LinearLayout>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="35dp">

                <Button
                    android:layout_width="184dp"
                    android:layout_height="wrap_content"
                    android:text="@string/save"
                    style="@style/ButtonA"
                    android:id="@+id/button"
                    android:layout_weight="0.12"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:onClick="save"/>
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
